// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui reducer adds integration popover status to state 1`] = `
Object {
  "basePath": "",
  "esKuery": "",
  "integrationsPopoverOpen": Object {
    "id": "popover-2",
    "open": true,
  },
  "lastRefresh": 125,
}
`;

exports[`ui reducer sets the application's base path 1`] = `
Object {
  "basePath": "yyz",
  "esKuery": "",
  "integrationsPopoverOpen": null,
  "lastRefresh": 125,
}
`;

exports[`ui reducer updates the refresh value 1`] = `
Object {
  "basePath": "abc",
  "esKuery": "",
  "integrationsPopoverOpen": null,
  "lastRefresh": 125,
}
`;
